k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-ms
  namespace: go-ms
spec:
  hosts:
  - "*"
  gateways:
  - go-ms-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: go-ms
        port:
          number: 8080
